--- a/index.html
+++ b/index.html
@@ -2,60 +2,55 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://aframe.io/releases/1.4.1/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
+    <title>MindAR Test</title>
+    <script defer src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.2/dist/mindar-image-aframe.prod.js"></script>
     <style>
-      body { margin: 0; overflow: hidden; }
       #status {
         position: fixed;
-        top: 20px;
+        top: 10px;
         left: 50%;
         transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.7);
-        color: white;
-        padding: 10px 20px;
-        border-radius: 10px;
+        padding: 5px 10px;
+        background: #000;
+        color: #fff;
+        z-index: 10;
         font-family: sans-serif;
-        z-index: 999;
       }
     </style>
   </head>
   <body>
-    <div id="status">🔍 Mencari gambar untuk dipindai...</div>
+    <div id="status">Finding image to scan...</div>
 
-    <a-scene
-      mindar-image="imageTargetSrc: target.mind; autoStart: true;"
-      embedded
-      vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: true"
-    >
+    <a-scene mindar-image="imageTargetSrc: ./targets.mind; autoStart: true;" 
+             vr-mode-ui="enabled: false" 
+             device-orientation-permission-ui="enabled: true" 
+             embedded 
+             color-space="sRGB">
+             
       <a-assets>
-        <img id="display-img" src="image-display.png" />
+        <img id="my-image" src="image-display.jpg" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-entity mindar-image-target="targetIndex: 0" id="target">
-        <a-plane
-          src="#display-img"
-          position="0 0 0"
-          rotation="-90 0 0"
-          width="1.5"
-          height="1"
-        ></a-plane>
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-plane 
+          src="#my-image" 
+          position="0 0 0" 
+          height="1" 
+          width="1">
+        </a-plane>
       </a-entity>
     </a-scene>
 
     <script>
-      const statusEl = document.getElementById("status");
-      const target = document.getElementById("target");
-
-      target.addEventListener("targetFound", () => {
-        statusEl.innerText = "✅ Gambar ditemukan!";
+      document.querySelector("a-scene").addEventListener("targetFound", () => {
+        document.getElementById("status").innerText = "✅ Gambar ditemukan!";
       });
 
-      target.addEventListener("targetLost", () => {
-        statusEl.innerText = "🔍 Mencari gambar untuk dipindai...";
+      document.querySelector("a-scene").addEventListener("targetLost", () => {
+        document.getElementById("status").innerText = "🔍 Finding image to scan...";
       });
     </script>
   </body>
