--- a/index.html
+++ b/index.html
@@ -1,56 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>MindAR Test</title>
-    <script defer src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.2/dist/mindar-image-aframe.prod.js"></script>
+    <meta charset="UTF-8" />
+    <title>MindAR Image Tracking</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/aframe/mindar-image-aframe.prod.js"></script>
     <style>
+      body { margin: 0; overflow: hidden; }
       #status {
-        position: fixed;
+        position: absolute;
         top: 10px;
-        left: 50%;
-        transform: translateX(-50%);
-        padding: 5px 10px;
-        background: #000;
-        color: #fff;
-        z-index: 10;
+        left: 10px;
+        color: white;
+        background: rgba(0, 0, 0, 0.5);
+        padding: 10px;
         font-family: sans-serif;
+        z-index: 100;
       }
     </style>
   </head>
   <body>
     <div id="status">Finding image to scan...</div>
 
-    <a-scene mindar-image="imageTargetSrc: ./targets.mind; autoStart: true;" 
-             vr-mode-ui="enabled: false" 
-             device-orientation-permission-ui="enabled: true" 
-             embedded 
-             color-space="sRGB">
-             
+    <a-scene
+      mindar-image="imageTargetSrc: targets.mind; autoStart: true; uiScanning: false; uiLoading: false"
+      embedded
+      color-space="sRGB"
+      renderer="colorManagement: true, physicallyCorrectLights"
+      vr-mode-ui="enabled: false"
+      device-orientation-permission-ui="enabled: false"
+    >
       <a-assets>
-        <img id="my-image" src="image-display.jpg" />
+        <img id="display-img" src="image-display.jpg" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-plane 
-          src="#my-image" 
-          position="0 0 0" 
-          height="1" 
-          width="1">
-        </a-plane>
+        <a-plane
+          src="#display-img"
+          position="0 0 0"
+          width="1"
+          height="1"
+          rotation="0 0 0"
+        ></a-plane>
       </a-entity>
     </a-scene>
 
     <script>
+      const statusText = document.getElementById("status");
+
+      document.querySelector("a-scene").addEventListener("arReady", () => {
+        console.log("MindAR is ready");
+      });
+
       document.querySelector("a-scene").addEventListener("targetFound", () => {
-        document.getElementById("status").innerText = "✅ Gambar ditemukan!";
+        statusText.innerText = "Image scanned!";
       });
 
       document.querySelector("a-scene").addEventListener("targetLost", () => {
-        document.getElementById("status").innerText = "🔍 Finding image to scan...";
+        statusText.innerText = "Finding image to scan...";
       });
     </script>
   </body>
