--- a/index.html
+++ b/index.html
@@ -1,66 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>MindAR Image Tracking</title>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/aframe/mindar-image-aframe.prod.js"></script>
+    <title>MindAR AR Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- JS lokal - urutan sangat penting -->
+    <script src="aframe.min.js"></script>
+    <script src="mindar-image.prod.js"></script>
+    <script src="mindar-image-aframe.prod.js"></script>
+
     <style>
-      body { margin: 0; overflow: hidden; }
-      #status {
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+      }
+
+      #ar-scene {
+        width: 100%;
+        height: 100%;
         position: absolute;
-        top: 10px;
-        left: 10px;
-        color: white;
-        background: rgba(0, 0, 0, 0.5);
-        padding: 10px;
-        font-family: sans-serif;
-        z-index: 100;
       }
     </style>
   </head>
-  <body>
-    <div id="status">Finding image to scan...</div>
 
+  <body>
     <a-scene
-      mindar-image="imageTargetSrc: targets.mind; autoStart: true; uiScanning: false; uiLoading: false"
+      mindar-image="imageTargetSrc: ./targets.mind; autoStart: true; filterMinCF: 0.0001; filterBeta: 0.001"
       embedded
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
       vr-mode-ui="enabled: false"
-      device-orientation-permission-ui="enabled: false"
+      device-orientation-permission-ui="enabled: true"
     >
       <a-assets>
-        <img id="display-img" src="image-display.jpg" />
+        <img id="display-image" src="image-display.jpg" />
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
       <a-entity mindar-image-target="targetIndex: 0">
         <a-plane
-          src="#display-img"
+          src="#display-image"
           position="0 0 0"
-          width="1"
-          height="1"
           rotation="0 0 0"
+          width="1"
+          height="0.75"
         ></a-plane>
       </a-entity>
     </a-scene>
-
-    <script>
-      const statusText = document.getElementById("status");
-
-      document.querySelector("a-scene").addEventListener("arReady", () => {
-        console.log("MindAR is ready");
-      });
-
-      document.querySelector("a-scene").addEventListener("targetFound", () => {
-        statusText.innerText = "Image scanned!";
-      });
-
-      document.querySelector("a-scene").addEventListener("targetLost", () => {
-        statusText.innerText = "Finding image to scan...";
-      });
-    </script>
   </body>
 </html>
